syntax = "proto3";

package location_types;
option go_package = "location_types_local.v1;location_types";

message LocationTypeResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

service LocationTypeService {
  rpc Create(CreateLocationTypeRequest) returns (LocationTypeResponse);
  rpc Get(GetLocationTypeRequest) returns (LocationTypeResponse);
  rpc Update(UpdateLocationTypeRequest) returns (LocationTypeResponse);
  rpc Delete(DeleteLocationTypeRequest) returns (DeleteLocationTypeResponse);
  rpc List(ListLocationTypesRequest) returns (LocationTypeListResponse);
}

message CreateLocationTypeRequest {
  string name = 1;
  string description = 2;
}

message GetLocationTypeRequest {
  int32 id = 1;
}

message UpdateLocationTypeRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message DeleteLocationTypeRequest {
  int32 id = 1;
}

message DeleteLocationTypeResponse {
  bool success = 1;
}

message ListLocationTypesRequest {}

message LocationTypeListResponse {
  repeated LocationTypeResponse data = 1;
}